--- a/frontend/login.html
+++ b/frontend/login.html
@@ -27,7 +27,7 @@
   <!-- login part -->
 
    <section class="flex justify-center items-center min-h-[80vh]">
-    <div class="w-full max-w-6xl bg-[#FAF4F4] p-8 rounded-lg shadow-md">
+    <div class="w-full max-w-6xl bg-[#f8efec] p-8 rounded-lg shadow-md">
 
       <h2 class="text-3xl font-bold text-center mb-8">Login to Your Account</h2>
 
