product details part done

--- a/frontend/footer.html
+++ b/frontend/footer.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<footer class="footer">
+<footer id="foot" class="footer">
     <div class="footer-container">
 
         <!-- Company -->
