all the extension of php has been converted into html and path has also been updated

--- a/frontend/inventory.html
+++ b/frontend/inventory.html
@@ -13,13 +13,15 @@
   <aside class="sidebar">
     <div><img src="asset/sell-it logo.png" alt="" class="logo"></div>
 
-    <nav>
-      <a href="vendor.php" style="text-decoration: none;" >📊 Dashboard</a>
+     <nav>
+      <a href="vendor.html" style="text-decoration: none;">
+        📊 Dashboard
+      </a>
       <a>➕ Add a New Product</a>
-      <a  href="vendor_orders.php" style="text-decoration: none;">🚚 Orders</a>
-      <a class="active">📦 Inventory</a>
-      <a href="vendor_finance.php" style="text-decoration: none;" >💰 Finance</a>
-      <a href="review.php" style="text-decoration: none;">⭐ Reviews</a>
+      <a href="vendor_orders.html" style="text-decoration: none;">🚚 Orders</a>
+      <a class="active" href="inventory.html" style="text-decoration: none;">📦 Inventory</a>
+      <a href="vendor_finance.html" style="text-decoration: none;">💰 Finance</a>
+      <a href="review.html" style="text-decoration: none;">⭐ Reviews</a>
       <a>🚪 Log Out</a>
     </nav>
   </aside>
