--- a/frontend/posts.html
+++ b/frontend/posts.html
@@ -16,10 +16,10 @@
   <aside class="sidebar">
       <div><img src="asset/sell-it logo.png" alt="" class="logo"></div>
     <nav>
-      <a href="admin_dashboard.php" style="text-decoration: none;">📊 Dashboard</a>
+      <a href="admin_dashboard.html" style="text-decoration: none;">📊 Dashboard</a>
       <a class="active"  >📫 Posts</a>
-      <a href="sellers.php" style="text-decoration: none;">🏬 Sellers</a>
-      <a href="analytics.php" style="text-decoration: none;">📈 Analytics</a>
+      <a href="sellers.html" style="text-decoration: none;">🏬 Sellers</a>
+      <a href="analytics.html" style="text-decoration: none;">📈 Analytics</a>
       <a class="logout">🚪 Log Out</a>
     </nav>
   </aside>
