--- a/frontend/vendor.html
+++ b/frontend/vendor.html
@@ -18,10 +18,10 @@
         📊 Dashboard
       </a>
       <a>➕ Add a New Product</a>
-      <a href="vendor_orders.php" style="text-decoration: none;">🚚 Orders</a>
-      <a href="inventory.php" style="text-decoration: none;">📦 Inventory</a>
-      <a href="vendor_finance.php" style="text-decoration: none;">💰 Finance</a>
-      <a href="review.php" style="text-decoration: none;">⭐ Reviews</a>
+      <a href="vendor_orders.html" style="text-decoration: none;">🚚 Orders</a>
+      <a href="inventory.html" style="text-decoration: none;">📦 Inventory</a>
+      <a href="vendor_finance.html" style="text-decoration: none;">💰 Finance</a>
+      <a href="review.html" style="text-decoration: none;">⭐ Reviews</a>
       <a>🚪 Log Out</a>
     </nav>
   </aside>
@@ -197,5 +197,4 @@
 
 </body>
 
-<?php include("footer.php")?>
 </html>
