--- a/frontend/admin_dashboard.html
+++ b/frontend/admin_dashboard.html
@@ -14,9 +14,9 @@
       <div><img src="asset/sell-it logo.png" alt="" class="logo"></div>
     <nav>
       <a class="active">📊 Dashboard</a>
-      <a href="posts.php" style="text-decoration: none;">📫 Posts</a>
-      <a href="sellers.php" style="text-decoration: none;">🏬 Sellers</a>
-      <a href="analytics.php" style="text-decoration: none;">📈 Analytics</a>
+      <a href="posts.html" style="text-decoration: none;">📫 Posts</a>
+      <a href="sellers.html" style="text-decoration: none;">🏬 Sellers</a>
+      <a href="analytics.html" style="text-decoration: none;">📈 Analytics</a>
       <a class="logout">🚪 Log Out</a>
     </nav>
   </aside>
@@ -140,7 +140,7 @@
 
   </main>
 </div>
-<?php include("footer.php")?>
 
 </body>
+
 </html>
