--- a/frontend/analytics.html
+++ b/frontend/analytics.html
@@ -14,9 +14,9 @@
   <aside class="sidebar">
       <div><img src="asset/sell-it logo.png" alt="" class="logo"></div>
     <nav>
-      <a href="admin_dashboard.php" style="text-decoration: none;">📊 Dashboard</a>
-      <a href="posts.php" style="text-decoration: none;">📫 Posts</a>
-      <a href="sellers.php" style="text-decoration: none;">🏬 Sellers</a>
+      <a href="admin_dashboard.html" style="text-decoration: none;">📊 Dashboard</a>
+      <a href="posts.html" style="text-decoration: none;">📫 Posts</a>
+      <a href="sellers.html" style="text-decoration: none;">🏬 Sellers</a>
       <a class="active">📈 Analytics</a>
       <a class="logout">🚪 Log Out</a>
     </nav>
