--- a/frontend/review.html
+++ b/frontend/review.html
@@ -13,13 +13,15 @@
   <aside class="sidebar">
     <div><img src="asset/sell-it logo.png" alt="" class="logo"></div>
 
-    <nav>
-      <a href="vendor.php">📊 Dashboard</a>
+     <nav>
+      <a href="vendor.html" style="text-decoration: none;">
+        📊 Dashboard
+      </a>
       <a>➕ Add a New Product</a>
-      <a href="vendor_orders.php">🚚 Orders</a>
-      <a href="inventory.php" style="text-decoration: none;">📦 Inventory</a>
-      <a href="vendor_finance.php" style="text-decoration: none;">💰 Finance</a>
-      <a class="active">⭐ Reviews</a>
+      <a href="vendor_orders.html" style="text-decoration: none;">🚚 Orders</a>
+      <a href="inventory.html" style="text-decoration: none;">📦 Inventory</a>
+      <a href="vendor_finance.html" style="text-decoration: none;">💰 Finance</a>
+      <a class="active" href="review.html" style="text-decoration: none;">⭐ Reviews</a>
       <a>🚪 Log Out</a>
     </nav>
   </aside>
