--- a/frontend/sellers.html
+++ b/frontend/sellers.html
@@ -13,10 +13,10 @@
   <aside class="sidebar">
       <div><img src="asset/sell-it logo.png" alt="" class="logo"></div>
     <nav>
-      <a href="admin_dashboard.php" style="text-decoration: none;">📊 Dashboard</a>
-      <a href="posts.php" style="text-decoration: none;">📫 Posts</a>
+      <a href="admin_dashboard.html" style="text-decoration: none;">📊 Dashboard</a>
+      <a href="posts.html" style="text-decoration: none;">📫 Posts</a>
       <a class="active">🏬 Sellers</a>
-      <a href="analytics.php" style="text-decoration: none;">📈 Analytics</a>
+      <a href="analytics.html" style="text-decoration: none;">📈 Analytics</a>
       <a class="logout">🚪 Log Out</a>
     </nav>
   </aside>
