--- a/frontend/vendor_orders.html
+++ b/frontend/vendor_orders.html
@@ -12,12 +12,14 @@
     <img src="asset/sell-it logo.png" class="logo" alt="Sell-It Logo">
 
     <nav>
-      <a href="vendor.php" style="text-decoration: none;">📊 Dashboard</a>
+      <a href="vendor.html" style="text-decoration: none;">
+        📊 Dashboard
+      </a>
       <a>➕ Add a New Product</a>
-      <a class="active">🚚 Orders</a>
-      <a href="inventory.php" style="text-decoration: none;">📦 Inventory</a>
-      <a  href="vendor_finance.php" style="text-decoration: none;">💰 Finance</a>
-      <a  href="review.php" style="text-decoration: none;">⭐ Reviews</a>
+      <a class="active" href="vendor_orders.html" style="text-decoration: none;">🚚 Orders</a>
+      <a href="inventory.html" style="text-decoration: none;">📦 Inventory</a>
+      <a href="vendor_finance.html" style="text-decoration: none;">💰 Finance</a>
+      <a href="review.html" style="text-decoration: none;">⭐ Reviews</a>
       <a>🚪 Log Out</a>
     </nav>
   </aside>
