login & signup page updated

--- a/frontend/student-login.html
+++ b/frontend/student-login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>student Log in</title>
 
       <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -67,7 +67,7 @@
       <!-- Signup -->
       <div class="flex justify-center items-center gap-2 mt-4 text-sm">
         <span>Don’t Have Account?</span>
-        <a href="#" id="sign-up-btn" class="border px-4 py-2 rounded bg-white hover:bg-gray-100">Sign up</a>
+        <a href="student-signup.html" id="sign-up-btn" class="border px-4 py-2 rounded bg-white hover:bg-gray-100">Sign up</a>
       </div>
 
         <!-- Social Login -->
