--- a/frontend/vendor-signup.html
+++ b/frontend/vendor-signup.html
@@ -28,7 +28,7 @@
     <h1 class="text-3xl font-bold">Create Your Account</h1>
     <div class="mt-3 flex justify-center items-center gap-3 text-sm">
       <span>Already have an account?</span>
-      <a href="login.html" class="border px-4 py-1 rounded hover:bg-white">Log in</a>
+      <a href="vendor-login.html" class="border px-4 py-1 rounded hover:bg-white">Log in</a>
     </div>
   </header>
 
