--- a/frontend/approve-post.html
+++ b/frontend/approve-post.html
@@ -8,6 +8,20 @@
 
 <body class="bg-[#dfd4cc]">
 
+      <!-- navbar -->
+
+      <nav class="flex justify-around items-center px-8 py-4 bg-white shadow">
+    <h1 class="text-xl font-bold">Sell it</h1>
+    <ul class="flex gap-6 text-sm">
+      <li><a href="#" class="hover:text-blue-600">Home</a></li>
+      <li><a href="#" class="hover:text-blue-600">Shop</a></li>
+      <li><a href="#" class="hover:text-blue-600">About</a></li>
+      <li><a href="#" class="hover:text-blue-600">Contact</a></li>
+    </ul>
+
+    <img src="asset/div2.png" alt="">
+  </nav>
+
 <!-- ================= PRODUCT DETAILS ================= -->
 <section class="max-w-6xl mx-auto px-6 py-12 grid grid-cols-1 md:grid-cols-2 gap-12">
 
