--- a/frontend/admin_dashboard.html
+++ b/frontend/admin_dashboard.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <title>Admin Dashboard</title>
   <link rel="stylesheet" href="css/admin_dashboard.css" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
 </head>
 <body>
 
@@ -17,7 +22,7 @@
       <a href="posts.html" style="text-decoration: none;">📫 Posts</a>
       <a href="sellers.html" style="text-decoration: none;">🏬 Sellers</a>
       <a href="analytics.html" style="text-decoration: none;">📈 Analytics</a>
-      <a class="logout">🚪 Log Out</a>
+      <a href="admin-login.html" class="logout" style="text-decoration: none;">🚪 Log Out</a>
     </nav>
   </aside>
 
