--- a/frontend/analytics.html
+++ b/frontend/analytics.html
@@ -18,7 +18,7 @@
       <a href="posts.html" style="text-decoration: none;">📫 Posts</a>
       <a href="sellers.html" style="text-decoration: none;">🏬 Sellers</a>
       <a class="active">📈 Analytics</a>
-      <a class="logout">🚪 Log Out</a>
+      <a href="admin-login.html" class="logout" style="text-decoration: none;">🚪 Log Out</a>
     </nav>
   </aside>
 
