--- a/frontend/posts.html
+++ b/frontend/posts.html
@@ -20,7 +20,7 @@
       <a class="active"  >📫 Posts</a>
       <a href="sellers.html" style="text-decoration: none;">🏬 Sellers</a>
       <a href="analytics.html" style="text-decoration: none;">📈 Analytics</a>
-      <a class="logout">🚪 Log Out</a>
+      <a href="admin-login.html" class="logout" style="text-decoration: none;">🚪 Log Out</a>
     </nav>
   </aside>
 
