--- a/frontend/sellers.html
+++ b/frontend/sellers.html
@@ -17,7 +17,7 @@
       <a href="posts.html" style="text-decoration: none;">📫 Posts</a>
       <a class="active">🏬 Sellers</a>
       <a href="analytics.html" style="text-decoration: none;">📈 Analytics</a>
-      <a class="logout">🚪 Log Out</a>
+      <a href="admin-login.html" class="logout" style="text-decoration: none;">🚪 Log Out</a>
     </nav>
   </aside>
 
