--- a/frontend/vendor.html
+++ b/frontend/vendor.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>Seller Dashboard</title>
   <link rel="stylesheet" href="css/vendor.css">
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
 </head>
 <body>
 
@@ -17,12 +22,12 @@
       <a class="active" style="text-decoration: none;">
         📊 Dashboard
       </a>
-      <a>➕ Add a New Product</a>
+      <a href="post-product.html">➕ Add a New Product</a>
       <a href="vendor_orders.html" style="text-decoration: none;">🚚 Orders</a>
       <a href="inventory.html" style="text-decoration: none;">📦 Inventory</a>
       <a href="vendor_finance.html" style="text-decoration: none;">💰 Finance</a>
       <a href="review.html" style="text-decoration: none;">⭐ Reviews</a>
-      <a>🚪 Log Out</a>
+      <a href="vendor-login.html">🚪 Log Out</a>
     </nav>
   </aside>
 
@@ -33,7 +38,7 @@
     <div
      class="header">
       <div>
-        <h2>Dashboard Overview</h2>
+        <h2 class="font-bold text-2xl">Dashboard Overview</h2>
         <p>Welcome back! Here's what's happening with your store.</p>
       </div>
       <div class="profile">
@@ -51,7 +56,7 @@
   <div class="card">
     <span><b>Total Sales</b></span>
     <h3>
-      24,580 tk
+      <span id="totalSales" class="font-extrabold size-10">24,580 tk</span>
       <span>
         <img src="asset/div1.png" alt="Sales" class="sells_Logo">
       </span>
@@ -61,7 +66,7 @@
   <div class="card">
     <span><b>Total Orders</b></span>
     <h3>
-      1,247
+     <span id="totalOrders" class="font-extrabold size-10">1247</span>
       <span>
         <img src="asset/div2.png" alt="Orders" class="sells_Logo">
       </span>
@@ -71,7 +76,7 @@
   <div class="card">
     <span><b>Total Earnings</b></span>
     <h3>
-      7,4200 tk
+      <span id="totalEarnings">74200</span> 
       <span>
         <img src="asset/div3.png" alt="Earnings" class="sells_Logo">
       </span>
@@ -87,7 +92,7 @@
       <div class="chart-card">
         <h4>Sales Overview</h4>
         <svg viewBox="0 0 500 200" class="line-chart">
-          <polyline
+          <polyline id="salesLine"
             points="20,150 90,110 160,130 230,80 300,60 370,30 440,50"
           />
         </svg>
@@ -100,7 +105,7 @@
       <!-- BAR CHART -->
       <div class="chart-card">
         <h4>Sales Trend</h4>
-        <div class="bar-chart">
+        <div class="bar-chart" id="salesBars">
           <div style="height:45%"></div>
           <div style="height:30%"></div>
           <div style="height:55%"></div>
@@ -124,7 +129,7 @@
       <div class="box">
         <h4>Stock Alerts</h4>
 
-        <div class="alert danger">
+        <div id="stockAlerts" class="alert danger">
           <div>
             <strong>Sticky Pads</strong>
             <small>Only 2 units left</small>
@@ -153,7 +158,7 @@
       <div class="box">
         <h4>Recent Orders</h4>
 
-        <div class="order">
+        <div id="recentOrders" class="order">
           <img src="https://i.pravatar.cc/30?1">
           <div>
             <strong>#ORD-1247</strong>
@@ -193,7 +198,12 @@
     </section>
 
   </main>
+  
 </div>
+
+<div id="footer"></div>
+
+<script src="script/vendor.js"></script>
 
 </body>
 
