product-details page updated

--- a/frontend/product-details.html
+++ b/frontend/product-details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>product details</title>
 
       <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -51,13 +51,13 @@
 
     <!-- Size -->
     <div class="mt-4">
-      <p class="text-sm mb-1">Size</p>
+      <p class="text-lg mb-1">Size</p>
       <div id="sizes" class="flex gap-2">L</div>
     </div>
 
     <!-- Color -->
     <div class="mt-4">
-      <p class="text-sm mb-1">Color</p>
+      <p class="text-lg mb-1">Color</p>
       <div id="colors" class="flex gap-2"></div>
     </div>
 
@@ -100,6 +100,11 @@
   <div id="relatedProducts"
        class="max-w-6xl mx-auto grid grid-cols-2 md:grid-cols-4 gap-10 text-center">
     <!-- Cards injected here -->
+
+    <img src="asset/cal.jpg" alt="">
+    <img src="asset/final cover.jpg" alt="">
+    <img src="asset/cover.jpg" alt="">
+    <img src="asset/desk.jpg" alt="">
   </div>
 
   <p class="text-center mt-10 text-sm text-blue-900 cursor-pointer hover:underline">
