landing page img path updated

--- a/frontend/home page/cart.html
+++ b/frontend/home page/cart.html
@@ -12,7 +12,7 @@
   <header class="site-header">
     <div class="container nav" id="top">
       <a href="index.html#home" class="logo">
-        <img src="logo.png" class="logo-img" alt="Sell Campus Logo">
+        <img src="/home page/assets/logo.png" class="logo-img" alt="Sell Campus Logo">
       </a>
 
       <nav class="nav-links" aria-label="Main">
