--- a/frontend/home page/index.html
+++ b/frontend/home page/index.html
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="container nav" id="top">
       <a href="index.html#home" class="logo">
-        <img src="logo.png" class="logo-img" alt="Sell Campus Logo">
+        <img src="/home page/assets/logo.png" class="logo-img" alt="Sell Campus Logo">
       </a>
 
       <nav class="nav-links" aria-label="Main">
@@ -138,7 +138,7 @@
             <a href="#products" class="btn btn-primary">Order Now</a>
           </div>
           <figure class="mini-banner-visual">
-            <img src="Hero2.jpg" alt="Student wearing headphones" />
+            <img src="/home page/assets/Hero2.jpg" alt="Student wearing headphones" />
           </figure>
         </div>
       </div>
@@ -167,7 +167,7 @@
           <article class="product-card" data-category="notebook">
             <div class="product-thumb">
               <span class="product-tag">New</span>
-              <img src="Crafted Notebook – Dotted.jpg" alt="Crafted notebook dotted" />
+              <img src="/home page/assets/Crafted Notebook – Dotted.jpg" alt="Crafted notebook dotted" />
             </div>
             <div class="product-body">
               <h3 class="product-title">Crafted Notebook – Dotted</h3>
@@ -192,7 +192,7 @@
           <article class="product-card" data-category="notebook">
             <div class="product-thumb">
               <span class="product-tag">Bestseller</span>
-              <img src="Crafted Notebook – Grid.jpg" alt="Crafted notebook grid" />
+              <img src="/home page/assets/Crafted Notebook – Grid.jpg" alt="Crafted notebook grid" />
             </div>
             <div class="product-body">
               <h3 class="product-title">Crafted Notebook – Grid</h3>
@@ -217,7 +217,7 @@
           <article class="product-card" data-category="bag">
             <div class="product-thumb">
               <span class="product-tag">Limited</span>
-              <img src="Campus Backpack – Sand.jpg" alt="Campus backpack sand" />
+              <img src="/home page/assets/Campus Backpack – Sand.jpg" alt="Campus backpack sand" />
             </div>
             <div class="product-body">
               <h3 class="product-title">Campus Backpack – Sand</h3>
@@ -242,7 +242,7 @@
           <article class="product-card" data-category="bag">
             <div class="product-thumb">
               <span class="product-tag">New color</span>
-              <img src="Everyday Canvas Tote.jpg" alt="Everyday canvas tote" />
+              <img src="/home page/assets/Everyday Canvas Tote.jpg" alt="Everyday canvas tote" />
             </div>
             <div class="product-body">
               <h3 class="product-title">Everyday Canvas Tote</h3>
@@ -267,7 +267,7 @@
           <article class="product-card" data-category="audio">
             <div class="product-thumb">
               <span class="product-tag">Noise cancel</span>
-              <img src="Focus Over-Ear Headphones.jpg" alt="Focus headphones" />
+              <img src="/home page/assets/Focus Over-Ear Headphones.jpg" alt="Focus headphones" />
             </div>
             <div class="product-body">
               <h3 class="product-title">Focus Over-Ear Headphones</h3>
@@ -292,7 +292,7 @@
           <article class="product-card" data-category="fashion">
             <div class="product-thumb">
               <span class="product-tag">New</span>
-              <img src="Campus Hoodie – Cream.jpg" alt="Campus hoodie cream" />
+              <img src="/home page/assets/Campus Hoodie – Cream.jpg" alt="Campus hoodie cream" />
             </div>
             <div class="product-body">
               <h3 class="product-title">Campus Hoodie – Cream</h3>
@@ -317,7 +317,7 @@
           <article class="product-card" data-category="accessory">
             <div class="product-thumb">
               <span class="product-tag">Bundle</span>
-              <img src="Desk Accessory Set.jpg" alt="Desk accessory set" />
+              <img src="/home page/assets/Desk Accessory Set.jpg" alt="Desk accessory set" />
             </div>
             <div class="product-body">
               <h3 class="product-title">Desk Accessory Set</h3>
@@ -342,7 +342,7 @@
           <article class="product-card" data-category="notebook">
             <div class="product-thumb">
               <span class="product-tag">Pack of 3</span>
-              <img src="Study Notebook Trio.jpg" alt="Study notebook trio" />
+              <img src="/home page/assets/Study Notebook Trio.jpg" alt="Study notebook trio" />
             </div>
             <div class="product-body">
               <h3 class="product-title">Study Notebook Trio</h3>
