removed all conflicts

--- a/frontend/admin-login.html
+++ b/frontend/admin-login.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>admin Log in</title>
+  <link rel="stylesheet" href="css/admin-login.css" />
 
-      <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     
@@ -88,6 +87,5 @@
 
 </section>
 
-<script src="script/login.js"></script>
 </body>
 </html>
