--- a/frontend/vendor-signup.html
+++ b/frontend/vendor-signup.html
@@ -1,170 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sign up</title>
-
-         <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sign Up</title>
+  <link rel="stylesheet" href="css/vendor-signup.css">
 </head>
 <body>
-      <!-- navbar -->
 
-      <nav class="max-w-screen-2xl mx-auto flex justify-around items-center px-8 py-4 bg-white shadow">
-    <h1 class="text-xl font-bold">Sell it</h1>
-    <ul class="flex gap-6 text-sm">
-      <li><a href="#" class="hover:text-blue-600">Home</a></li>
-      <li><a href="#" class="hover:text-blue-600">Shop</a></li>
-      <li><a href="#" class="hover:text-blue-600">About</a></li>
-      <li><a href="#" class="hover:text-blue-600">Contact</a></li>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <h1 class="logo">Sell it</h1>
+
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Shop</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
 
-    <img src="asset/div2.png" alt="">
+    <img src="asset/div2.png" alt="icon" class="nav-img">
   </nav>
 
-   <!-- Header -->
-  <header class="max-w-screen-2xl mx-auto bg-[#f8efec] py-10 text-center">
-    <h1 class="text-3xl font-bold">Create Your Account</h1>
-    <div class="mt-3 flex justify-center items-center gap-3 text-sm">
+  <!-- Header -->
+  <header class="header">
+    <h1>Create Your Account</h1>
+    <div class="login-link">
       <span>Already have an account?</span>
-      <a href="vendor-login.html" class="border px-4 py-1 rounded hover:bg-white">Log in</a>
+      <a href="vendor-login.html">Log in</a>
     </div>
   </header>
 
-  <!-- form -->
+  <!-- Form -->
+  <form class="form-container" onsubmit="registerUser(event)">
 
-   <form class="max-w-7xl mx-auto bg-white p-8 my-10 shadow rounded"
-        onsubmit="registerUser(event)">
-
-    <!-- BASIC INFO -->
-    <h2 class="font-semibold mb-4">Basic Information</h2>
-
-    <div class="grid md:grid-cols-2 gap-4">
-      <input 
-          type="text" 
-          id="name"
-          placeholder="your name"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-      <input 
-          type="text" 
-          id="email"
-          placeholder="your email"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-      <input 
-          type="date" 
-          id="birth"
-          placeholder="date of birth"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-      <input 
-          type="text" 
-          id="phone"
-          placeholder="your phone"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-      <input 
-          type="text" 
-          id="address"
-          placeholder="your address"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-       <input 
-          type="text" 
-          id="gender"
-          placeholder="gender(male/female)"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-      <input 
-          type="password" 
-          id="pass"
-          placeholder="password"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-      <input 
-          type="password" 
-          id="conf-pass"
-          placeholder="confirm password"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
+    <h2>Basic Information</h2>
+    <div class="grid">
+      <input type="text" placeholder="Your name">
+      <input type="email" placeholder="Your email">
+      <input type="date">
+      <input type="text" placeholder="Your phone">
+      <input type="text" placeholder="Your address">
+      <input type="text" placeholder="Gender (male/female)">
+      <input type="password" placeholder="Password">
+      <input type="password" placeholder="Confirm password">
     </div>
 
-    <textarea class="input mt-4 h-24 w-full border" placeholder="Description" id="description"></textarea>
+    <textarea placeholder="Description"></textarea>
 
-
-     <!-- EDUCATION -->
-    <h2 class="font-semibold mt-8 mb-4">Education</h2>
-
-    <div class="grid md:grid-cols-2 gap-4">
-      <input 
-          type="text" 
-          id="university"
-          placeholder="University"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-      <input 
-          type="text" 
-          id="department"
-          placeholder="Department"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-      <input 
-          type="text" 
-          id="semester"
-          placeholder="Year/semester"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-       <input 
-          type="text" 
-          id="id"
-          placeholder="student id"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
+    <h2>Education</h2>
+    <div class="grid">
+      <input type="text" placeholder="University">
+      <input type="text" placeholder="Department">
+      <input type="text" placeholder="Year / Semester">
+      <input type="text" placeholder="Student ID">
     </div>
 
-
-      <!-- SOCIAL -->
-    <h2 class="font-semibold mt-8 mb-4">Social Links</h2>
-
-    <div class="grid md:grid-cols-2 gap-4">
-       <input 
-          type="text" 
-          id="fb"
-          placeholder="facebook"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-       <input 
-          type="text" 
-          id="insta"
-          placeholder="instagram"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-        <input 
-          type="text" 
-          id="linkdin"
-          placeholder="Linkedin"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
-       <input 
-          type="text" 
-          id="dribble"
-          placeholder="dribble"
-          class="w-full px-4 py-2 border rounded focus:outline-none focus:ring focus:ring-blue-200"
-        />
+    <h2>Social Links</h2>
+    <div class="grid">
+      <input type="text" placeholder="Facebook">
+      <input type="text" placeholder="Instagram">
+      <input type="text" placeholder="LinkedIn">
+      <input type="text" placeholder="Dribbble">
     </div>
 
-    <!-- Error -->
-    <p id="errorMsg" class="text-red-500 text-sm mt-4 hidden"></p>
+    <p id="errorMsg" class="error">Error message goes here</p>
 
-      <!-- Submit -->
-    <button class="mt-6 w-full border py-3 rounded hover:bg-gray-100">
-      Register
-    </button>
-    </form>
+    <button type="submit">Register</button>
+  </form>
 
-
-<script src="script/signup.js"></script>
 </body>
 </html>
